# uv-nix-lightning

./: .gitignore  flake.nix  pyproject-overrides.nix  pyproject.toml
src/: main.py
