[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.4.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
hello = "main:main"

[tool.ruff.lint]
select = ["I", "W"]
fixable = ["ALL"]
